--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -36,7 +36,7 @@
       <div class="row">
         <div class="px-md-5 flex-column d-flex justify-content-center" style="">
           <h1 class="text-center"><b>Natalie Smith</b></h1>
-          <h3 class="text-center"><b>Digital &amp; Crafts Artist</b></h3>
+          <h3 class="text-center"><b>Digital Artist &amp; Craftswoman</b></h3>
           <p class="lead mx-3 mb-3 text-justify">Welcome to my portfolio page. I am a passionate, imaginative and&nbsp;conscientious digital artist and arts and crafts creator. I've always been a creative person my whole life and I want to be employed doing what I love by creating my art passions. I create digital art using the most popular industry standard software and hardware. I enjoy sketching on my graphics tablets often and creating a variety of different 2D artwork ranging from pixel art to seeing line art to completion. I also have knitting and sewing skills alongside non-digital artwork experience and I have plans to sell my creations online. Find my CV and portfolio below.<br></p>
           <div class="row px-2">
             <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/natsmith1219" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
@@ -55,8 +55,8 @@
   <div class="pt-3 pb-3">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row mx-auto">
-        <div class="col-md-12">
-          <h1 class="d-flex justify-content-center align-items-center display-3 text-center">Games Art Portfolio</h1>
+        <div class="col-md-12 my-3">
+          <h1 class="d-flex justify-content-center align-items-center display-3 text-center"><b>Games Art Portfolio</b></h1>
         </div>
       </div>
     </div>
@@ -65,7 +65,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center my-3" style="">Blight of the Rose (In Development) - 2021+ (Unity, C#)</h1>
+          <h1 class="text-center my-3" style=""><b>Blight of the Rose (In Development) - 2021+ (Unity, C#)</b></h1>
           <p class="d-flex flex-grow-1 px-4 text-justify">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors. My responsibility is to develop all of the various 2D sprites to import into the project such as control scheme icon, in-game maps, item icon sprites and more.&nbsp;All sprites are work in progress whilst the game is in development. All sprites were made in Aseprite and exported as a png.<br><br>Below is a video of the game in its current state. It is in early development and most art isn't final until release.</p>
         </div>
       </div>
@@ -73,7 +73,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center">Item Icons</h1>
+          <h1 class="text-center"><b>Item Icons</b></h1>
         </div>
       </div>
       <div class="row pb-3">
@@ -90,11 +90,11 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center">Crafting Station</h1>
+          <h1 class="text-center"><b>Crafting Stations</b></h1>
         </div>
       </div>
       <div class="row pb-3">
-        <div class="p-3 mx-auto col-12 col-md-12"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Crafting_Station_spritesheet.png" width="300
+        <div class="mx-auto col-12 col-md-12"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Crafting_Station_spritesheet.png" width="300
 350
 
 500
@@ -110,17 +110,17 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center">Placeholder Character&nbsp;</h1>
+          <h1 class="text-center"><b>Placeholder Character&nbsp;</b></h1>
         </div>
       </div>
       <div class="row pb-3">
-        <div class="p-3 col-md-12 mx-auto col-12"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Placeholder_StickMan_spritesheet.png" width="300"> </div>
+        <div class="col-md-12 mx-auto col-12"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Placeholder_StickMan_spritesheet.png" width="300"> </div>
       </div>
     </div>
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center" contenteditable="true">Control Schemes</h1>
+          <h1 class="text-center"><b>Control Schemes</b></h1>
         </div>
       </div>
       <div class="row pb-3">
@@ -133,11 +133,11 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="text-center">User Interface</h1>
+          <h1 class="text-center"><b>User Interface</b></h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-6 p-3 col-md-12 mx-auto"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Phone_spritesheet.png"> </div>
+        <div class="col-6 col-md-12 mx-auto"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Phone_spritesheet.png"> </div>
       </div>
       <div class="row">
         <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Category_Icons_spritesheet.png"> </div>
@@ -153,16 +153,16 @@
     <div class="row">
       <div class="col-md-12 mb-3">
         <div class="row">
-          <div class="col-md-12">
-            <div class="row">
-              <div class="col-md-12">
-                <h1 class="text-center">Development Update Video</h1>
-              </div>
-            </div>
+          <div class="col-md-12 my-3">
+            <h1 class="text-center"><b>Development Update Video</b></h1>
           </div>
         </div>
-        <div class="embed-responsive embed-responsive-16by9">
-          <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls"> Your browser does not support HTML5 video. </video>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="embed-responsive embed-responsive-16by9">
+              <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls"> Your browser does not support HTML5 video. </video>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -172,23 +172,23 @@
       <div class="row">
       </div>
     </div>
-    <div class="pt-3">
+    <div class="pt-3" style="">
       <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="text-center my-3" style="">Pixel Pinball Arcade - 2020 (Unity C#)</h1>
-            <p class="d-flex flex-grow-1 px-4">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
+            <h1 class="text-center my-3" style=""><b>Pixel Pinball Arcade - 2020 (Unity C#)</b></h1>
+            <p class="d-flex flex-grow-1 px-4 text-justify">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
           </div>
         </div>
       </div>
       <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
         <div class="row">
-          <div class="col-md-12 py-3"><a class="btn btn-primary btn-block btn-lg" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Download Pixel Pinball Arcade</a></div>
+          <div class="col-md-12 py-3"><a class="btn btn-block btn-lg btn-success" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Download Pixel Pinball Arcade</a></div>
         </div>
         <div class="row">
           <div class="text-center mx-auto col-md-8">
-            <h1 class="mb-3">2D Sprites</h1>
-            <p class="lead">All sprites were designed and developed from scratch by myself taking inspiration from real pinball boards. They were all developed and exported using Aseprite.</p>
+            <h1 class="mb-3"><b>2D Sprites</b></h1>
+            <p class="lead text-justify">All sprites were designed and developed from scratch by myself taking inspiration from real pinball boards. They were all developed and exported using Aseprite.</p>
           </div>
         </div>
       </div>
@@ -214,7 +214,7 @@
           <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Speed_Boost_Unlit_sprite.png" width="200"></div>
           <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Outer_sprite.png" height="200" width="200"></div>
           <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Inner_sprite.png" width="250" height="200"></div>
-          <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/UI_Pause_Button_Unlit_sprite.png" height="250" width="220"></div>
+          <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/UI_Pause_Button_Unlit_sprite.png" height="250" width="200"></div>
           <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_sprite.png" height="200" width="200"> </div>
           <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Green_sprite.png" height="200" width="200"> </div>
           <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Red_sprite.png" height="200" width="200"> </div>
@@ -223,7 +223,7 @@
       </div>
       <div class="container mb-3" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-12 mb-3">
             <div class="embed-responsive embed-responsive-16by9">
               <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls"> Your browser does not support HTML5 video. </video>
             </div>
