--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -238,7 +238,7 @@
   <div class="text-center mb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
-        <div class="mx-auto col-lg-7">
+        <div class="col-lg-7 mx-auto mb-3">
           <h1 class="text-center my-3" style="">Contact Form</h1>
           <form action="https://formspree.io/f/meqvvqlz" method="POST">
             <div class="form-row">
