--- a/index.html
+++ b/index.html
@@ -23,116 +23,98 @@
       </div>
     </div>
   </div>
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="container"> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar13">
-      </button>
-      <div class="collapse navbar-collapse" id="navbar13">
-      </div>
-    </div>
-  </nav>
   <div class="" style="	background-position: right bottom;	background-size: cover;	background-repeat: repeat;">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row pb-0 pt-2" style="">
         <div class="col-md-12 col-lg-12">
-          <h1 class="text-center py-3 bg-secondary">About Us</h1>
-          <p style="" class="my-2 bg-primary py-4 px-3 text-justify">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
+          <h1 class="text-center bg-secondary py-2">About Us</h1>
+          <p style="" class="my-2 bg-primary py-4 px-3 text-left">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
+          <div class="col-md-12">
+            <h1 class="text-center bg-secondary py-2">The Team</h1>
+            <div class="row">
+              <div class="col-12 col-lg-6"> <img class="img-fluid d-block mb-3 mx-auto border border-dark" width="350
+400
+350" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
+                <div class="row">
+                  <div class="col-md-12" style="">
+                    <h2 class="bg-secondary text-center">Connor Orton BSc</h2>
+                    <h5 class="bg-secondary text-center py-2">Games Programmer &amp; Designer</h5>
+                  </div>
+                </div>
+                <p class="mb-0 bg-primary px-2 py-2 text-left" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2 btn-block" href="connororton.html" style="">Portfolio &amp; CV</a>
+              </div>
+              <div class="col-12 col-lg-6">
+                <img class="img-fluid d-block mb-3 mx-auto border border-dark" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
+                <div class="row">
+                  <div class="col-md-12">
+                    <h2 class="bg-secondary text-center">Natalie Smith</h2>
+                    <h5 class="bg-secondary text-center py-2">2D Digital Artist</h5>
+                  </div>
+                </div>
+                <p class="mb-0 bg-primary px-2 py-2 text-left">Natalie is a 2D digital artist. She has always been passionate about art and never forgets the day she got her first art tablet and pen. Her responsibilities include conceptualizing various game ideas and creating assets based on them using industry standard software and art techniques. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2 btn-block" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+    <div class="row">
+    </div>
+    <div class="row">
     </div>
   </div>
   <div class="text-center">
-    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-      <div class="row">
-        <div class="col-md-12 mx-auto">
-          <h1 class="text-center bg-secondary">The Team</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto border border-dark" width="350
-400
-350" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
-          <h4 class="bg-secondary"> <b>Connor Orton BSC</b>
-            <p class="lead py-1">Games Programmer &amp; Designer</p>
-          </h4>
-          <p class="mb-0 bg-primary px-2 py-2 text-justify" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2 btn-block" href="connororton.html" style="">Portfolio &amp; CV</a>
-        </div>
-        <div class="col-12 col-lg-6 py-2" style="">
-          <img class="img-fluid d-block mb-3 mx-auto border border-dark" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
-          <h4 class="bg-secondary"> <b>Natalie Smith</b>
-            <p class="lead py-1">2D Digital Artist</p>
-          </h4>
-          <p class="mb-0 bg-primary px-2 py-2 text-justify">Natalie is a 2D digital artist. She has always been passionate about art and never forgets the day she got her first art tablet and pen. Her responsibilities include conceptualizing various game ideas and creating assets based on them using industry standard software and art techniques. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2 btn-block" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
-        </div>
-      </div>
-    </div>
   </div>
   <div class="">
-    <div class="container">
-      <div class="row bg-light">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center bg-secondary py-2" style="">Game Projects</h1>
+        </div>
       </div>
     </div>
   </div>
   <div class="" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12 pb-2">
-          <h1 class="text-center bg-secondary">Game Projects</h1>
+        <div class="col-md-12" style="">
+          <h1 class="text-center bg-secondary py-2">Pixel Pinball Arcade</h1>
         </div>
       </div>
-      <div class="row" style="">
-        <div class="p-md-5 d-flex flex-column col-lg-8 justify-content-center" style="">
-          <h1 class="bg-secondary text-center">Pixel Pinball Arcade</h1>
-          <p class="mb-0 bg-primary py-2 px-2 text-justify" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android developed in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found below.<br><br>Credits:<br>- Connor Orton (Designer, Games Programmer)<br>- Natalie Smith (2D Digital Artist)</p><a class="btn btn-success my-3" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Download Pixel Pinball Arcade</a>
-        </div>
-        <div class="col-lg-4" style="">
-          <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
-            <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100 mx-auto" src="assets/Portfolio/Shared/PPA/PPA_Screenshot1.jpg">
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100 float-left" src="assets/Portfolio/Shared/PPA/PPA_Screenshot2.jpg">
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot3.jpg">
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot4.jpg">
-              </div>
-            </div> <a class="carousel-control-prev" href="#carousel_ppa" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel_ppa" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="mb-0 bg-primary py-2 px-2 text-left">Pixel Pinball Arcade is a 2D pixel art pinball game for Android developed in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found below.<br><br>Credits:<br>- Connor Orton (Designer, Games Programmer)<br>- Natalie Smith (2D Digital Artist)</p>
+          <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><a class="btn btn-success btn-block mt-2 text-center" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>&nbsp;Pixel Pinball Arcade</a></div>
+            <div class="col-md-4"></div>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 px-5">
+        <div class="col-md-12 my-2">
           <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item p-3" controls="controls" width="10"> Your browser does not support HTML5 video. </video>
+            <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls" width="11"> Your browser does not support HTML5 video. </video>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="pt-3 pb-3">
+  <div class="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row" style="">
-        <div class="col-lg-8 p-md-5 d-flex flex-column justify-content-center">
-          <h2 class="bg-secondary text-center" style="">Project Blight (in development)</h2>
-          <p class="mb-0 bg-primary px-2 py-2 text-justify" contenteditable="true">Our next project is a 2D Action Horror sidescroller with a pixel art style set in a populated city in the modern day during a apocalyptic style event. To be released multiplatform.</p>
-        </div>
-        <div class="col-lg-4 py-4">
-          <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
-            <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block w-100" src="assets/FineChapGames/QuestionMark.png"> </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center">Development Update Video</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 px-5">
+          <h2 class="text-center bg-secondary py-2">Project Blight (in development)</h2>
+          <p class="px-2 py-2 bg-primary text-center">Our next project is a 2D Action Horror sidescroller with a pixel art style set in a populated city in the modern day during a apocalyptic style event. To be released multiplatform. Below is the first development update of the game which features the user interface.</p>
+          <h2 class="text-center bg-primary py-2">Development Update Video</h2>
           <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item p-3" controls="controls" width="10"> Your browser does not support HTML5 video. </video>
+            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls" width="11
+11"> Your browser does not support HTML5 video. </video>
           </div>
+        </div>
+        <div class="text-justify m-3">
         </div>
       </div>
     </div>
