--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- PAGE settings -->
   <link rel="icon">
   <title>Fine Chap Games</title>
-  <meta name="description" content="Welcome to the Fine Chap Games indie games development team's website!">
+  <meta name="description" content="Welcome to the Fine Chap Games indie games development team's website.">
   <meta name="keywords" content="Fine Chap Games Development Indie">
   <meta name="author" content="Pingendo">
   <!-- CSS dependencies -->
@@ -29,8 +29,8 @@
         <div class="col-md-12 col-lg-12">
           <h1 class="text-center bg-secondary py-2">About Us</h1>
           <p style="" class="my-2 bg-primary py-4 px-3 text-left">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
+          <h1 class="text-center bg-secondary py-2">The Team</h1>
           <div class="col-md-12">
-            <h1 class="text-center bg-secondary py-2">The Team</h1>
             <div class="row">
               <div class="col-12 col-lg-6"> <img class="img-fluid d-block mb-3 mx-auto border border-dark" width="350
 400
@@ -94,7 +94,12 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 my-2">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-12 mt-2">
+              <h2 class="text-center bg-primary py-2"><b>Gameplay Video</b></h2>
+            </div>
+          </div>
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls" width="11"> Your browser does not support HTML5 video. </video>
           </div>
@@ -102,19 +107,28 @@
       </div>
     </div>
   </div>
-  <div class="">
+  <div class="" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-      <div class="row" style="">
-        <div class="col-md-12">
-          <h2 class="text-center bg-secondary py-2">Project Blight (in development)</h2>
-          <p class="px-2 py-2 bg-primary text-center">Our next project is a 2D Action Horror sidescroller with a pixel art style set in a populated city in the modern day during a apocalyptic style event. To be released multiplatform. Below is the first development update of the game which features the user interface.</p>
-          <h2 class="text-center bg-primary py-2">Development Update Video</h2>
-          <div class="embed-responsive embed-responsive-16by9">
-            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls" width="11
-11"> Your browser does not support HTML5 video. </video>
-          </div>
+      <div class="row">
+        <div class="col-md-12" style="">
+          <h1 class="text-center bg-secondary py-2">Project Blight (In Development)</h1>
         </div>
-        <div class="text-justify m-3">
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="mb-0 bg-primary py-2 px-2 text-left">Our next project is a 2D Action Horror sidescroller with a pixel art style set in a populated city in the modern day during a apocalyptic style event. To be released multiplatform. Below is the first development update of the game which features the user interface.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 mt-2">
+          <h2 class="text-center bg-primary py-2"><b>Development Update Video</b></h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 my-2">
+          <div class="embed-responsive embed-responsive-16by9">
+            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls" width="11"> Your browser does not support HTML5 video. </video>
+          </div>
         </div>
       </div>
     </div>
