--- a/connororton.html
+++ b/connororton.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
   <div class="" style="">
-    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+    <div class="container pb-4" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border my-2 mx-auto" src="assets/Portrait/Connor_Orton.jpg" height="300" width="300
 400
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-2">
+        <div class="col-md-12 pb-4">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-2">
+        <div class="col-md-12 pb-4">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -135,7 +135,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-2">
+        <div class="col-md-12 pb-4">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Connor/Battle Beasts - RPG Mechanics Asset Pack - Trailer.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -158,7 +158,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-2">
+        <div class="col-md-12 pb-4">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Connor/Survival Training Vr.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -181,7 +181,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-2">
+        <div class="col-md-12 pb-4">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Connor/Isolation Complex - Gameplay.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -204,7 +204,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 mb-2">
+        <div class="col-md-12 mb-4">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Connor/Once Upon a Castle - Gameplay.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -227,7 +227,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 mb-2">
+        <div class="col-md-12 mb-4">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Connor/Dash and Stack.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -250,7 +250,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 pb-2">
+        <div class="col-md-12 pb-4">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Connor/I Am Alone.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -273,7 +273,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 mb-2">
+        <div class="col-md-12 mb-4">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Connor/Operation Health.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
