--- a/connororton.html
+++ b/connororton.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
   <div class="" style="">
-    <div class="container pb-4" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+    <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center border-dark border my-2 mx-auto" src="assets/Portrait/Connor_Orton.jpg" height="300" width="300
 400
@@ -62,7 +62,7 @@
   <div class="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 pb-2">
           <h3 class="text-center bg-secondary display-4 p-2" style=""><b>Games Programming Portfolio</b></h3>
         </div>
       </div>
